<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/teal_200"
    android:orientation="vertical"
    android:id="@+id/deletefolder_edittext">

    <TextView
        android:id="@+id/deletefolder_edittext_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:text="@string/delete_folder"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp">

        <Button

            android:id="@+id/deletefolder_edittext_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/deletefolder_edittext_btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="40sp" />


    </LinearLayout>
    <Button
        android:id="@+id/clear_list_cache"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:text="@string/clear_list_cache"
        android:textColor="@android:color/white"
        android:textSize="40sp" />
</LinearLayout>